<resources>
    <string name="app_name">EECS4443-Lab03</string>
    <string name="contact_picture">Contact Picture</string>
    <string name="contact_name">NAME</string>
    <string name="contact_birthday">BIRTHDAY</string>
    <string name="contact_phone_number">PHONE NUMBER</string>
    <string name="required_name">NAME (*)</string>
    <string name="required_phone_number">PHONE NUMBER (*)</string>
    <string name="contact_description">DESCRIPTION</string>
    <string name="contact_notes">NOTES</string>
    <string name="contact_date_added">DATE ADDED</string>
    <string name="contact_edit_button_text">Edit Contact</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_existing_contact_label">Edit Existing Contact</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="data_storage_method">Data Storage Method:</string>
    <string name="shared_preferences">SharedPreferences</string>
    <string name="sqlite">SQLite</string>
</resources>